# project3

./: pyproject.toml
.github/workflows/: test.yml
data/: my_test.csv
mst/: graph.py
test/: test_mst.py
