[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Silvia Miramontes", email = "silvia.miramontes@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy"]

[project.urls]
Home = "https://www.github.com/s-miramontes/project3"
